--- a/client/public/css/alert.css
+++ b/client/public/css/alert.css
@@ -1,11 +1,23 @@
 @keyframes alertAnimation {
-	from {top: -2em;}
-	to {top: 3.2em;}
+	0% {
+		top: -2em;
+	}
+	15% {
+		top: 3.2em;
+	}
+	70% {
+		top: 3.2em;
+	}
+	99% {
+		top: -2em;
+	}
+	100% {
+		visibility: hidden;
+	}
 }
 
 .alertBox {
 	position: fixed;
-	/*top: 3.2em;*/
 	top: -2em;
 	left: 50%;
 	padding: 0 0.6em;
@@ -18,9 +30,9 @@
 	z-index: 3;
 	animation-name: alertAnimation;
 	/*animation-delay: 6s;*/
-	animation-duration: 10s;
-	animation-direction: alternate;
-	animation-iteration-count: 2;
+	animation-duration: 5s;
+	/*animation-direction: alternate;*/
+	/*animation-iteration-count: 2;*/
 }
 
 .alertSuccess {
