--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,10 +1,10 @@
 body {
+  margin: auto;
   font-family: 'Raleway', sans-serif;
   background: linear-gradient(
     rgba(255,255,255,.45),
     rgba(255,255,255,.45)
     ),
-    url('../wallpaper/wallpaper.jpg');
+    url('../wallpaper/hypnotize.png');
   background-attachment: fixed;
-  background-size: cover;
-;}
+}
