--- a/client/public/css/homepage.css
+++ b/client/public/css/homepage.css
@@ -20,7 +20,7 @@
 
 .deetsContainer {
 	display: grid;
-	grid-template-columns: 640px auto;
+	grid-template-columns: 50% auto;
 }
 
 .deetsPhotoContainer {
@@ -33,11 +33,11 @@
 	position: relative;
 	top: 50%;
   transform: perspective(1px) translateY(-50%);
+  width: 100%;
 }
 
 .deetsInfoContainer {
 	padding: 0.5em;
-	height: 90%;
 	box-sizing: border-box;
 }
 
@@ -85,4 +85,30 @@
 }
 .postDeleteButton {
 	margin-left: 1em;
+}
+
+@media screen and (max-width: 600px) {
+
+	.thumbnailContainer {
+		margin: 1.5em auto;
+		display: block;
+	}
+
+	.deetsContainer {
+		grid-template-columns: auto;
+		overflow-y: scroll;
+	}
+
+	.deetsPhoto {
+		top: 0;
+	  transform: none;
+	}
+
+	.deetsInfoContainer {
+		max-height: 14em;
+		overflow-y: auto;
+	}
+	.commentList {
+		height: 100%;
+	}
 }
